--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,10 @@
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-compass": "^2.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^1.11.2",
     "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.6",
     "jadeify": "^4.4.0",
     "vinyl-source-stream": "^1.1.0",
