--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^1.11.2",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.6",
     "jadeify": "^4.4.0",
