Documentation on system requirements

--- a/server/tox.ini
+++ b/server/tox.ini
@@ -20,7 +20,8 @@ commands = python setup.py test --coverage --testr-args='{posargs}'
 
 [testenv:gabbi]
 commands = python -m unittest -v mediapublic/tests/api.py
-deps = gabbi
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
 
 [pep8]
 #ignore = H305,H307,H402,H904
