--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "backbone": "^1.2.1",
     "backbone-routing": "^0.2.0",
     "backbone.marionette": "^2.4.2",
+    "backbone.storage": "^0.1.0",
     "bootstrap-sass": "^3.3.5",
     "jquery": "^2.1.4",
     "underscore": "^1.8.3"
