--- a/server/production.ini
+++ b/server/production.ini
@@ -16,6 +16,8 @@ pyramid.includes =
 
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 
+production_deployment = true
+
 [server:main]
 use = egg:waitress#main
 host = 0.0.0.0
