Add jinja2 support for templates

--- a/server/development.ini
+++ b/server/development.ini
@@ -3,7 +3,12 @@
 # http://docs.pylonsproject.org/projects/pyramid/en/1.5-branch/narr/environment.html
 ###
 
-[app:main]
+[composite:main]
+use = egg:Paste#urlmap
+/ = mediapublic
+/auth = velruse
+
+[app:mediapublic]
 use = egg:mediapublic
 
 pyramid.reload_templates = true
@@ -13,6 +18,7 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
+    pyramid_jinja2
 
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 
