Get rid of mediapublic sessions, use velruse only

--- a/server/development.ini
+++ b/server/development.ini
@@ -31,7 +31,7 @@ sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 ###
 
 [server:main]
-use = egg:waitress#main
+use = egg:Paste#http
 host = 0.0.0.0
 port = 6543
 
@@ -41,7 +41,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, mediapublic, sqlalchemy
+keys = root, mediapublic, velruse, sqlalchemy
 
 [handlers]
 keys = console
@@ -57,6 +57,11 @@ handlers = console
 level = DEBUG
 handlers =
 qualname = mediapublic
+
+[logger_velruse]
+level = DEBUG
+handlers =
+qualname = velruse
 
 [logger_sqlalchemy]
 level = WARN
