Configure velruse to run in-process with the mediapublic app

--- a/server/development.ini
+++ b/server/development.ini
@@ -22,6 +22,25 @@ pyramid.includes =
 
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 
+
+[app:velruse]
+use = egg:velruse
+
+#setup = mediapublic.setup_velruse
+
+velruse.providers =
+	velruse.providers.twitter
+
+session.secret = notverysecret
+endpoint = /login
+store = sqla
+store.url = sqlite:///%(here)s/mediapublic.sqlite
+
+provider.twitter.consumer_key = XXXXXXXXX
+provider.twitter.consumer_secret = YYYYYYYYY
+provider.twitter.authorize = true
+
+
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
 # debugtoolbar.hosts = 127.0.0.1 ::1
