move authz secret to config file

--- a/server/development.ini
+++ b/server/development.ini
@@ -21,6 +21,7 @@ pyramid.includes =
     pyramid_jinja2
 
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
+mediapublic.authentication_secret = secretstuff
 
 
 [app:velruse]
