Add `requests` requirement

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,12 +1,13 @@
+Paste
 SQLAlchemy
 colander
 cornice
 pyramid
+pyramid_jinja2
 pyramid_tm
+requests
 sqlalchemy_utils
 transaction
+velruse
 waitress
 zope.sqlalchemy
-velruse
-pyramid_jinja2
-Paste
