Add option to bypass Auth[nz] with mediapublic.ignore_authentication bool

--- a/server/mediapublic/tests/gabbits/user.yaml
+++ b/server/mediapublic/tests/gabbits/user.yaml
@@ -23,8 +23,7 @@ tests:
     method: POST
     url: /users
     data:
-      first: Joe
-      last: Test
+      display_name: Joe Test
       twitter: '@birds'
       email: 'test@foo.test'
 
