--- a/server/mediapublic/tests/gabbi.ini
+++ b/server/mediapublic/tests/gabbi.ini
@@ -14,6 +14,8 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
+mediapublic.ignore_authentication = true
+
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 
 # By default, the toolbar only appears for clients from IP addresses
