Don't use cornice for handling exceptions

--- a/server/development.ini
+++ b/server/development.ini
@@ -22,6 +22,7 @@ pyramid.includes =
 
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 mediapublic.authentication_secret = secretstuff
+cornice.handle_exceptions = False
 
 
 [app:velruse]
