Temporarily ignore authentication locally.

--- a/server/development.ini
+++ b/server/development.ini
@@ -23,6 +23,7 @@ pyramid.includes =
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 mediapublic.authentication_secret = secretstuff
 cornice.handle_exceptions = False
+mediapublic.ignore_authentication = true
 
 
 [app:velruse]
