--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "backbone.storage": "^0.1.0",
     "bootstrap-sass": "^3.3.5",
     "jquery": "^2.1.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "underscore.string": "^3.2.2"
   },
   "devDependencies": {
     "babelify": "^6.1.3",
