--- a/server/mediapublic/tests/gabbits/playlist.yaml
+++ b/server/mediapublic/tests/gabbits/playlist.yaml
@@ -8,7 +8,7 @@ tests:
   - name: Get Playlists
     url: /playlists
     response_json_paths:
-      $.playlists: []
+      $.data: []
 
   - name: Create a playlist incorrectly
     status: 400
@@ -29,4 +29,4 @@ tests:
   - name: Get Playlists
     url: /playlists
     response_json_paths:
-      $.playlists.`len`: 1
+      $.data.`len`: 1
