Add contentType to get the server parsing properly, include org extra mixin.

--- a/server/mediapublic/tests/gabbits/organization.yaml
+++ b/server/mediapublic/tests/gabbits/organization.yaml
@@ -43,6 +43,10 @@ tests:
       fax: ' '
       primary_website: 'http://www.wxxi.org/'
       secondary_website: ' '
+      extra:
+        twitter: '@wxxi'
+    response_json_paths:
+      $.extra.twitter: '@wxxi'
 
   - name: Get Organizations
     url: /organizations
