Add login view, hook it up to backend.

--- a/server/development.ini
+++ b/server/development.ini
@@ -23,8 +23,9 @@ pyramid.includes =
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 mediapublic.authentication_secret = secretstuff
 cornice.handle_exceptions = False
-mediapublic.ignore_authentication = true
+mediapublic.ignore_authentication = false
 
+mediapublic.client_url = //localhost:8080
 
 [app:velruse]
 use = egg:velruse
@@ -39,6 +40,8 @@ endpoint = /login
 store = sqla
 store.url = sqlite:///%(here)s/mediapublic.sqlite
 
+# Fill in these to enable local authentication. For more, see
+# https://github.com/mediapublic/mediapublic/pull/51#issuecomment-140136279.
 provider.twitter.consumer_key = XXXXXXXXX
 provider.twitter.consumer_secret = YYYYYYYYY
 provider.twitter.authorize = true
