Split the client after-login route based on pre-existence.

--- a/server/development.ini
+++ b/server/development.ini
@@ -25,7 +25,8 @@ mediapublic.authentication_secret = secretstuff
 cornice.handle_exceptions = False
 mediapublic.ignore_authentication = false
 
-mediapublic.client_url = //localhost:8080
+mediapublic.login_url = //localhost:8080/
+mediapublic.signup_url = //localhost:8080/#signup
 
 [app:velruse]
 use = egg:velruse
