--- a/server/development.ini
+++ b/server/development.ini
@@ -22,7 +22,7 @@ pyramid.includes =
 sqlalchemy.url = sqlite:///%(here)s/mediapublic.sqlite
 mediapublic.authentication_secret = secretstuff
 cornice.handle_exceptions = False
-mediapublic.ignore_authentication = false
+mediapublic.ignore_authentication = true
 
 mediapublic.login_url = //localhost:8080/
 mediapublic.signup_url = //localhost:8080/#signup
