--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "backbone.marionette": "^2.4.2",
     "backbone.storage": "^0.1.0",
     "bootstrap-sass": "^3.3.5",
+    "envify": "^3.4.0",
     "html-truncate": "^1.2.1",
     "jquery": "^2.1.4",
     "tinymce": "^4.3.1",
@@ -21,22 +22,29 @@
   "devDependencies": {
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-jade": "^1.1.0",
     "gulp-jshint": "^1.11.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-rsync": "0.0.5",
+    "gulp-sass": "^2.1.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "jadeify": "^4.4.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
+    "watchify": "^3.3.1",
+    "yargs": "^3.31.0"
   },
   "browserify": {
     "transform": [
       "jadeify",
-      "babelify"
+      "babelify",
+      "envify"
     ]
   }
 }
