--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.11",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
@@ -45,7 +46,16 @@
     "transform": [
       "jadeify",
       "babelify",
-      "envify"
+      "envify",
+      "browserify-shim"
     ]
+  },
+  "browser": {
+    "bootstrapjs": "./node_modules/bootstrap-sass/assets/javascripts/bootstrap.js"
+  },
+  "browserify-shim": {
+    "bootstrapjs": {
+      "depends": ["jquery:jQuery"]
+    }
   }
 }
