--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "envify": "^3.4.0",
     "html-truncate": "^1.2.1",
     "jquery": "^2.1.4",
+    "jquery-deparam": "^0.4.2",
     "tinymce": "^4.3.1",
     "typeahead.js-browserify": "^1.0.7",
     "underscore": "^1.8.3",
@@ -55,7 +56,9 @@
   },
   "browserify-shim": {
     "bootstrapjs": {
-      "depends": ["jquery:jQuery"]
+      "depends": [
+        "jquery:jQuery"
+      ]
     }
   }
 }
