--- a/client/package.json
+++ b/client/package.json
@@ -22,14 +22,15 @@
     "underscore.string": "^3.2.2"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.6",
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
     "browserify-shim": "^3.8.11",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-eslint": "^1.1.1",
     "gulp-jade": "^1.1.0",
-    "gulp-jshint": "^1.11.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
